# billreminder

./: .gitignore  AUTHORS  BROKEN  CHANGELOG  CONTRIBUTORS  COPYING  COPYRIGHT  ChangeLog  DONE  HACKING  INSTALL  LICENSE  MANIFEST.in  MANTAINERS  Makefile.am  NEWS  README  TODO  autogen.sh  bill.py  billreminder  billreminder.desktop  billreminder.doap  billreminder.glade  billreminder.glade.bak  billreminder.in  billreminder.py  billreminderd.in  billremindernotifier.desktop  billy  changelog  configure.ac  create_changelog  create_pot  dal.py  setup.py
MonoDevelop/: BillReminder.mds
MonoDevelop/BillReminder/: BillReminder.mdp  BillReminder.pidb  frmAbout.cs  frmAlert.cs  frmAlert.resources  frmBillDialog.cs  frmBillDialog.resources  frmMain.cs
MonoGtkSharp/: BillReminder.cs  License  Makefile  README  billreminder.glade  billreminder.glade.bak
PyGtk/: BillReminder.py  billobjects.py  billreminder.glade  billreminder.glade.bak  billreminder.gladep  billreminder.py  database.py  xmlizer.py
PyGtk#/: Bill.py  BillReminder.py  billreminder.glade  billreminder.glade.bak
PyGtk#/data/: BillReminder.db
WinForms/: Bill.cs  Configuration.cs  Display.cs  Menu.cs  NewBill.cs  Preferences.cs  README  configure  frmAbout.cs  frmAbout.resources  frmAbout.resx  frmAlert.cs  frmAlert.resx  frmBillDialog.cs  frmBillDialog.resx  frmMain.cs  frmMain.resources  frmMain.resx  images.resources  paid.xml  unpaid.xml
apidocs/: classIndex.html  index.html  moduleIndex.html  nameIndex.html  src.__init__.html  src.common.html  src.controller.__init__.html  src.controller.aboutdialog.AboutDialog.html  src.controller.aboutdialog.html  src.controller.billdialog.BillDialog.html  src.controller.billdialog.html  src.controller.daemon.Daemon.html  src.controller.daemon.html  src.controller.html  src.controller.maindialog.BillReminder.html  src.controller.maindialog.html  src.controller.trayicon.NotifyIcon.html  src.controller.trayicon.NotifyMessage.html  src.controller.trayicon.html  src.controller.utils.ContextMenu.html  src.controller.utils.Message.html  src.controller.utils.html  src.html  src.model.__init__.html  src.model.bill.Bill.html  src.model.bill.html  src.model.config.Config.html  src.model.config.html  src.model.daemon.Daemon.html  src.model.daemon.NullDevice.html  src.model.daemon.html  src.model.dal.DAL.html  src.model.dal.html  src.model.db.__init__.html  src.model.db.billstable.BillsTable.html  src.model.db.billstable.html  src.model.db.configtable.ConfigTable.html  src.model.db.configtable.html  src.model.db.fieldstable.FieldsTable.html  src.model.db.fieldstable.html  (+17 more)
billreminder/: AlertWindow.cs  Bill.cs  BillCollection.cs  Configuration.cs  Menu.cs  Search.cs  __init__.py  aboutdialog.py  bill.py  billdialog.py  common.py  configure  dal.py  help.xml  maindialog.py  startup.py  trayicon.py
data/: .gitignore  Changelog  Makefile.am  add_bill.ui  billreminder.cfg  billreminder.desktop  billreminder.desktop.in  billreminder.schemas  billreminder.schemas.in  billreminder.service  billreminder.service.in  billreminderd.desktop.in  main.ui
data/fixtures/: sample_user.json
data/images/: Makefile.am
debian/: changelog  control  copyright  docs  manpages  rules
gui/: aboutdialog.glade  aboutdialog.glade.h  billdialog.glade  billdialog.glade.bak  billdialog.glade.h  billreminder.glade  maindialog.glade  maindialog.glade.h  systraymenu.glade  systraymenu.glade.bak  systraymenu.glade.h
locale/: billreminder.pot  pt_BR.po
locale/es/LC_MESSAGES/: billreminder.mo
locale/nl/LC_MESSAGES/: billreminder.mo
locale/no_NB/LC_MESSAGES/: billreminder.mo
locale/po/: billreminder.pot  es.po  nl.po  no_NB.po  pt_BR.po  sv.po
locale/pt_BR/LC_MESSAGES/: billreminder.mo
locale/sv/: sv.po
locale/sv/LC_MESSAGES/: billreminder.mo
m4/: python.m4
man/: Makefile.am  billreminder.1  billreminderd.1
po/: ChangeLog  LINGUAS  POTFILES.in  POTFILES.skip  billreminder.pot  ca.po  ca@valencia.po  cs.po  da.po  de.po  el.po  en_CA.po  en_GB.po  es.po  fi.po  fr.po  genpot.sh  gl.po  he.po  hr.po  hu.po  it.po  lv.po  nb.po  nl.po  no.po  no_NB.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sl.po  sv.po  tl.po  tr.po  zh_CN.po
src/: Changelog  Makefile.am  __init__.py  aboutdialog.py  bill.py  billdialog.py  billreminder.py  billreminderd.py  common.py  dal.py  maindialog.py  notifier.py  settings.py  startup.py  urls.py  utils.py  webreminder.py
src/bills/: models.py
src/controller/: __init__.py  aboutdialog.py  billdialog.py  daemon.py  maindialog.py  trayicon.py  utils.py
src/daemon/: Changelog  Makefile.am  alarm.py  dbus_manager.py  device.py  main.py
src/db/: ERD.dia  Makefile.am  alarmstable.py  billstable.py  categoriestable.py  entities.py  fieldstable.py  generictable.py  versionstable.py
src/gui/: Changelog  Makefile.am  aboutdialog.py  adddialog.py  categoriesdialog.py  maindialog.py  prefdialog.py
src/gui/widgets/: Changelog  Makefile.am  calendarwidget.py  charting.py  chartwidget.py  datebutton.py  datepicker.py  genericlistview.py  graphics.py  statusbar.py  timeline.py  timewidget.py  toolbar.py  trayicon.py  unity.py  viewbill.py  viewcategory.py
src/gui/widgets/pycha/: README.txt  bar.py  chart.py
src/gui/widgets/pycha/.svn/: all-wcprops  entries
src/lib/: .gitignore  Changelog  Makefile.am  Settings.py  SettingsGConf.py  actions.py  bill.py  bubble.py  common.py  config.py  dal.py  dbus_actions.py  defs.py.in  dialogs.py  i18n.py  migrate_to_gconf.py  oldactions.py  olddal.py  scheduler.py  sysvars.py.in  utils.py
src/model/: __init__.py  bill.py  config.py  daemon.py  dal.py  dbus_manager.py  i18n.py
src/model/db/: __init__.py  billstable.py  configtable.py  fieldstable.py  generictable.py  versionstable.py
src/setup/: models.py
src/tests/: dal_test.py  db_test.py  run_tests.py
src/view/: __init__.py  maindialog.py
web/theme/billreminder/: archive.php  footer.php  geany_run_script.sh  header.php  index.html  index.php  page.php  search.php  single.php  style.css
web/theme/billreminder/js/: billreminder.js  jquery.js
