## Process this file with automake to produce Makefile.in

billreminder_widgetsdir = $(pythondir)/billreminder/gui/widgets
billreminder_widgets_PYTHON = \
	__init__.py \
	calendarwidget.py \
	charting.py \
	chartwidget.py \
	datebutton.py \
	genericlistview.py \
	statusbar.py \
	timeline.py \
	timewidget.py \
	toolbar.py \
	trayicon.py \
	viewbill.py \
	viewcategory.py
